fix: Archive password manager autofill + preserve Sprint backup files
Changes:
- Add hidden username field to trigger password manager save/autofill
- Change password field name to standard 'password' (was 'archive-password')
- Preserve Sprint 2/3 and Sprint 4 backup files for reference
- Include internet discourse migration (Sprint 3 work)
- Add PhilosophyTooltip component and validation utilities
- Update workbench panels with latest UX improvements

This commit captures all uncommitted work before branch cleanup.

--- a/cloud-workbench/index.html
+++ b/cloud-workbench/index.html
@@ -4,7 +4,14 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>cloud-workbench</title>
+    <meta name="color-scheme" content="dark light" />
+    <title>humanizer.com workbench</title>
+    <script>
+      // System theme detection - apply before render to prevent flash
+      if (window.matchMedia('(prefers-color-scheme: light)').matches) {
+        document.documentElement.classList.add('light-mode');
+      }
+    </script>
   </head>
   <body>
     <div id="root"></div>
