fix: Theme detection and mobile UX improvements
- Fixed index.html to set data-theme attribute (was using wrong .light-mode class)
- Added ThemeToggle to mobile header (was only on desktop)
- Cleaned up ThemeToggle component (removed Tailwind dark: classes)
- Fixed mobile overlay backdrop to use inline styles
- Reorganized mobile header layout (theme toggle between menu and tools)

This fixes:
- Invisible text issue (theme attribute mismatch)
- No way to toggle theme on mobile
- Improves mobile header spacing and usability

--- a/cloud-workbench/index.html
+++ b/cloud-workbench/index.html
@@ -8,9 +8,10 @@
     <title>humanizer.com workbench</title>
     <script>
       // System theme detection - apply before render to prevent flash
-      if (window.matchMedia('(prefers-color-scheme: light)').matches) {
-        document.documentElement.classList.add('light-mode');
-      }
+      const savedTheme = localStorage.getItem('theme');
+      const systemTheme = window.matchMedia('(prefers-color-scheme: dark)').matches ? 'dark' : 'light';
+      const theme = savedTheme || systemTheme;
+      document.documentElement.setAttribute('data-theme', theme);
     </script>
   </head>
   <body>
